--- a/pages/templates/pages/page_create.html
+++ b/pages/templates/pages/page_create.html
@@ -6,14 +6,13 @@
 <main role="main">
   <div class="container">
     <div class="row mt-3">
-      <div class="col-md-9 mx-auto">
+      <div class="col-md-9 mx-auto mb-5">
         <div>
             <form action="" method="post">{% csrf_token %}
-                <table>
-                    {{ form.as_table }}
-                </table>
-                <br>
-                <input type="submit" value="Crear página" />
+                    {{ form.as_p }}
+                <div class="text-center">
+                  <input type="submit" class="btn btn-primary btn-block" value="Crear página" />
+                </div>
             </form>
         </div>
       </div>
