--- a/pages/templates/pages/page_confirm_delete.html
+++ b/pages/templates/pages/page_confirm_delete.html
@@ -7,12 +7,15 @@
   <div class="container">
     <div class="row mt-3">
       <div class="col-md-9 mx-auto">
-        <div>
-            <form action="" method="post">{% csrf_token %}
-                <p>¿Estás seguro de que quieres borrar "{{ object }}"?</p>
-                <input type="submit" value="Sí, borrar la página" />
-            </form>
-        </div>
+        {% if not "ok" in request.GET %}
+          <p style="color: blue;" > 
+            <a href="{% url 'pages:pages' %}">Volver a la lista de páginas</a>
+          </p>
+        {% endif %}
+        <form action="" method="post">{% csrf_token %}
+            <p>¿Estás seguro de que quieres borrar "{{ object }}"?</p>
+            <input type="submit" class="btn btn-primary btn-block" value="Sí, borrar la página" />
+        </form>
       </div>
     </div>
   </div>
