--- a/pages/templates/pages/page_update_form.html
+++ b/pages/templates/pages/page_update_form.html
@@ -6,21 +6,19 @@
 <main role="main">
   <div class="container">
     <div class="row mt-3">
-      <div class="col-md-9 mx-auto">
-        <div>
+      <div class="col-md-9 mx-auto mb-5">
+        <p><a href="{% url 'pages:pages' %}">Volver</a>
           {% if "ok" in request.GET %}
             <p style="color: green;" >Formulario actualizado correctamente | 
               <a href="{% url 'pages:page' page.id page.title|slugify %}">Mira el resultado</a>
             </p>
           {% endif %}
           <form action="" method="post">{% csrf_token %}
-              <table>
-                  {{ form.as_table }}
-              </table>
-              <br>
-              <input type="submit" value="Actualizar página" />
+              {{ form.as_p }}
+              <div class="text-center">
+                <input type="submit" class="btn btn-primary btn-block" value="Actualizar página" />
+              </div>
           </form>
-        </div>
       </div>
     </div>
   </div>
