--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -32,11 +32,16 @@
               </li>
             </ul>
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="/admin/">
-                  {% if request.user.is_staff %}Admin{% else %}Acceder{% endif %}
-                </a>
-              </li>
+              {% if not request.user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'login' %}">Login</a>
+                </li>
+              {% else %}
+                <form id="logout-form" method="post" action="{% url 'admin:logout' %} ">
+                  {% csrf_token %}
+                  <button type="submit" >Log out</button>
+                </form>
+              {% endif %}
             </ul>
           </div>
         </div>
