--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -7,6 +7,9 @@
   <div class="container">
     <div class="row mt-3">
       <div class="col-md-9 mx-auto mb-5">
+      {% if "registration" in request.GET %}
+        <p style="color: green;">Usuario registrado correctamente, ya puede iniciar sesión</p>
+      {% endif %}
         <form action="" method="post">{% csrf_token %}
           <h3 class="mb-4">Iniciar sesión</h3>
           {% if form.non_field_errors %}
@@ -22,6 +25,7 @@
           </p>
           <p><input type="submit" class="btn btn-primary btn-block" value="Acceder"></p>
         </form>
+        
       </div>
     </div>
   </div>
