--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -24,6 +24,7 @@
               id="id_password" class="form-control" placeholder="Contraseña"/>
           </p>
           <p><input type="submit" class="btn btn-primary btn-block" value="Acceder"></p>
+          <p><a href="{% url 'password_reset' %}">He olvidado mi contraseña</a></p>
         </form>
         
       </div>
