Adding a Profile for User (OneToOne relation with User)

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -41,11 +41,12 @@
                 </li>
               {% else %}
                 <li class="nav-item">
+                  <a class="nav-link" href="{% url 'profile' %}">Perfil</a>
+                </li>
                   <form id="logout-form" method="post" action="{% url 'admin:logout' %} ">
                     {% csrf_token %}
                     <button type="submit" style="background-color: #343a40; border: none; color: #f8f9fa;">Log out</button>
                   </form>
-                </li>
               {% endif %}
             </ul>
           </div>
