--- a/registration/templates/registration/profile_form.html
+++ b/registration/templates/registration/profile_form.html
@@ -24,6 +24,9 @@
               <input type="file" name="avatar" class="form-control-file mt-3" id="id_avatar">
               {{ form.bio }}
               {{ form.link }}
+              <input type="email" class="form-control mt-3" value="{{request.user.email}}" readonly>
+              <p class="mt-3">Si desea cambiar el email haga click <a href="{% url 'profile_email' %}">aquí</a></p><br>
+              <p class="mt-3">Si desea cambiar la contraseña haga click <a href="{% url 'password_change' %}">aquí</a></p>
               <input type="submit" class="btn btn-primary btn-block mt-3" value="Actualizar">
             </div>
           </div>
